# aZ80embler

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
source/: main.c
source/assembler/: assembler.c  assembler.h
source/include/: defines.h  directive_types.h  flag_types.h  identifier.h  opcode_types.h  operand_types.h  register_types.h  types.h
source/lexer/: lexer.c  lexer.h  token.c  token.h  token_list.c  token_list.h
source/logging/: logging.c  logging.h
source/parser/: directive.c  directive.h  instruction.c  instruction.h  instruction_encoding.h  operand.c  operand.h  parser.c  parser.h  parser_internal.h  statement.h  symbol.h
source/utility/: alloc_w.c  alloc_w.h  argument_parser.c  argument_parser.h  linked_list.c  linked_list.h
tests/: CMakeLists.txt  testfile.txt
tests/source/: test_LD.c  test_parser_BIT.c  test_parser_EX_LD_CP.c  test_parser_LD.c  test_parser_PUSH_POP.c  test_parser_arithmetic.c  test_parser_call_return.c  test_parser_gparithmetic_cpucontrol.c  test_parser_input_output.c  test_parser_jump.c  test_parser_rotate_shift.c
